--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage ./test/.*.test.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --forceExit ./test/unit/.*.test.js",
+    "integration:test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --forceExit ./test/integration/.*.test.js"
   },
   "devDependencies": {
     "jest": "^28.1.1",
-    "mocha": "10.0.0"
+    "mocha": "10.0.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "express": "^4.18.2",
